--- a/app/views/tenon/comments/index.html.haml
+++ b/app/views/tenon/comments/index.html.haml
@@ -2,10 +2,16 @@
 
 %header
   %h1 Comments
+
   .tools
+    = render "tenon/shared/section_header/sidebar_toggle"
+
+    .header-button
+      = link_to '#', id: 'quick-search' do
+        .header-icon= fa_icon('fw search')
+
+  %toolbox
     = render "tenon/shared/section_header/quick_search", record_list: '#comments'
-  .spacer
 
 .main-content
-  .container
-    %ul#comments.record-list.with-thumbnail{data: {records: {url: comments_path(format: 'json'), template: 'tenon/templates/comments/comment_row', name: 'comment'}}}
+  %ul#comments.record-list.with-thumbnail{data: {records: {url: comments_path(format: 'json'), template: 'tenon/templates/comments/comment_row', name: 'comment'}}}
