--- a/app/views/tenon/events/index.html.haml
+++ b/app/views/tenon/events/index.html.haml
@@ -5,19 +5,23 @@
       = link_to "New Event", new_event_path, class: 'btn btn-block btn-primary'
 
 %header
-  .container
-    %h1 Events
+  %h1 Events
 
-    .tools
-      = render "tenon/shared/section_header/quick_search", record_list: '#events'
-      / .header-tool
-      /   %a{:href => new_event_path }= raw "#{fa_icon('calendar')} +"
+  .tools
+    = render "tenon/shared/section_header/sidebar_toggle"
 
-  .spacer
+    .header-button
+      = link_to '#', id: 'quick-search' do
+        .header-icon= fa_icon('fw search')
+
+    / .header-tool
+    /   %a{:href => new_event_path }= raw "#{fa_icon('calendar')} +"
+
+  %toolbox
+    = render "tenon/shared/section_header/quick_search", record_list: '#events'
 
 .main-content
-  .container
-    %ul#events.record-list{data: {role: 'records-list', records: {url: events_path(format: 'json'), template: 'tenon/templates/events/event_row', name: 'event'}}}
+  %ul#events.record-list{data: {role: 'records-list', records: {url: events_path(format: 'json'), template: 'tenon/templates/events/event_row', name: 'event'}}}
 
-    .spacer
-    = link_to "Load More Events", '#', :class => 'infinite-loader', 'data-record-list' => '#events'
+  .spacer
+  = link_to "Load More Events", '#', :class => 'infinite-loader', 'data-record-list' => '#events'
