--- a/app/views/tenon/galleries/index.html.haml
+++ b/app/views/tenon/galleries/index.html.haml
@@ -4,19 +4,22 @@
       %h2 Galleries
       = link_to "New Gallery", new_gallery_path, class: 'btn btn-block btn-primary'
 %header
-  .container
-    %h1 Galleries
+  %h1 Galleries
 
-    .tools
-      = render "tenon/shared/section_header/quick_search", record_list: '#galleries'
-      / .header-tool
-      /   %a{:href => new_gallery_path }= raw "#{fa_icon('th')} +"
+  .tools
+    = render "tenon/shared/section_header/sidebar_toggle"
 
-  .spacer
+    .header-button
+      = link_to '#', id: 'quick-search' do
+        .header-icon= fa_icon('fw search')
+  / .header-tool
+  /   %a{:href => new_gallery_path }= raw "#{fa_icon('th')} +"
+
+  %toolbox
+    = render "tenon/shared/section_header/quick_search", record_list: '#galleries'
 
 .main-content
-  .container
-    %ul#galleries.record-list{data: {records: {url: galleries_path(format: 'json'), template: 'tenon/templates/galleries/gallery_row', name: 'gallery'}}}
+  %ul#galleries.record-list{data: {records: {url: galleries_path(format: 'json'), template: 'tenon/templates/galleries/gallery_row', name: 'gallery'}}}
 
-    .spacer
-    = link_to "Load More Galleries", '#', :class => 'infinite-loader', 'data-record-list' => '#galleries'
+  .spacer
+  = link_to "Load More Galleries", '#', :class => 'infinite-loader', 'data-record-list' => '#galleries'
