--- a/app/views/tenon/posts/edit.html.haml
+++ b/app/views/tenon/posts/edit.html.haml
@@ -1,12 +1,10 @@
 %header
-  %h1
-    Edit a Post
+  %h1 Edit a Post
 
   .tools
+    = render "tenon/shared/section_header/sidebar_toggle"
+
     = language_switcher(:posts)
 
-  .spacer
-
 .main-content
-  .container
-    = render :partial => "form"
+  = render :partial => "form"
