--- a/app/views/tenon/tenon_callouts/index.html.haml
+++ b/app/views/tenon/tenon_callouts/index.html.haml
@@ -8,11 +8,15 @@
   %h1 Tenon Callouts
 
   .tools
+    = render "tenon/shared/section_header/sidebar_toggle"
+
+    .header-button
+      = link_to '#', id: 'quick-search' do
+        .header-icon= fa_icon('fw search')
+
+  %toolbox
     = render "tenon/shared/section_header/quick_search", record_list: '#tenon_callouts'
 
-  .spacer
-
 .main-content
-  .container
-    = error_messages_for :tenon_callout
-    %ul#tenon_callouts.record-list.sortable{data: {records: {url: tenon_callouts_path(format: 'json'), template: 'tenon/templates/tenon_callouts/tenon_callout_row', name: 'tenon_callout'}, :'reorder-path' => reorder_tenon_callouts_path}}
+  = error_messages_for :tenon_callout
+  %ul#tenon_callouts.record-list.sortable{data: {records: {url: tenon_callouts_path(format: 'json'), template: 'tenon/templates/tenon_callouts/tenon_callout_row', name: 'tenon_callout'}, :'reorder-path' => reorder_tenon_callouts_path}}
