--- a/app/views/tenon/users/edit.html.haml
+++ b/app/views/tenon/users/edit.html.haml
@@ -1,7 +1,10 @@
 %header
-  %h1 Editing User
-  .tools= language_switcher(:users)
-  .spacer
+  %h1 Edit a User
+
+  .tools
+    = render "tenon/shared/section_header/sidebar_toggle"
+
+    = language_switcher(:users)
 
 .main-content
-  .container= render :partial => "form"
+  = render :partial => "form"
