--- a/app/views/tenon/users/new.html.haml
+++ b/app/views/tenon/users/new.html.haml
@@ -2,10 +2,9 @@
   %h1 New User
 
   .tools
+    = render "tenon/shared/section_header/sidebar_toggle"
+
     = language_switcher(:users)
 
-  .spacer
-
 .main-content
-  .container
-    = render :partial => "form"
+  = render :partial => "form"
