--- a/app/assets/stylesheets/tenon/ui/quick-search.css.scss
+++ b/app/assets/stylesheets/tenon/ui/quick-search.css.scss
@@ -1,4 +1,4 @@
-#quick-search {
+.header-button #quick-search {
   @include transition(all 0.2s ease);
 
   &.open {
@@ -8,8 +8,8 @@
 }
 
 toolbox #quick-search-container {
-  display: none;
   padding: $tn-padding;
+  display: none;
   &.open {
     display: block;
   }
