let's not have two elements with #quick-search

--- a/app/views/tenon/assets/index.html.haml
+++ b/app/views/tenon/assets/index.html.haml
@@ -10,7 +10,7 @@
     /   = link_to raw("#{fa_icon('picture-o')} +"), '#', data: {'modal-target' => '#new-asset', 'modal-title' => 'Upload Assets'}
 
     .header-button
-      = link_to '#', id: 'quick-search' do
+      = link_to '#', id: 'quick-search-toggle' do
         .header-icon= fa_icon('fw search')
 
   %toolbox
