--- a/app/views/tenon/posts/index.html.haml
+++ b/app/views/tenon/posts/index.html.haml
@@ -15,7 +15,7 @@
     = render "tenon/shared/section_header/sidebar_toggle"
 
     .header-button
-      = link_to '#', id: 'quick-search' do
+      = link_to '#', id: 'quick-search-toggle' do
         .header-icon= fa_icon('fw search')
 
     / .header-tool
