--- a/app/views/tenon/galleries/index.html.haml
+++ b/app/views/tenon/galleries/index.html.haml
@@ -10,7 +10,7 @@
     = render "tenon/shared/section_header/sidebar_toggle"
 
     .header-button
-      = link_to '#', id: 'quick-search' do
+      = link_to '#', id: 'quick-search-toggle' do
         .header-icon= fa_icon('fw search')
   / .header-tool
   /   %a{:href => new_gallery_path }= raw "#{fa_icon('th')} +"
