--- a/app/views/tenon/pages/index.html.haml
+++ b/app/views/tenon/pages/index.html.haml
@@ -11,7 +11,7 @@
     = render "tenon/shared/section_header/sidebar_toggle"
 
     .header-button
-      = link_to '#', id: 'quick-search' do
+      = link_to '#', id: 'quick-search-toggle' do
         .header-icon= fa_icon('fw search')
 
   %toolbox
