rename %toolbox to .toolbox, fix toolbox hide/show on >= -breakpoint

--- a/app/assets/stylesheets/tenon/ui/quick-search.css.scss
+++ b/app/assets/stylesheets/tenon/ui/quick-search.css.scss
@@ -7,7 +7,7 @@
   }
 }
 
-toolbox #quick-search-container {
+.toolbox #quick-search-container {
   padding: $tn-padding;
   display: none;
   &.open {
