--- a/app/views/tenon/assets/index.html.haml
+++ b/app/views/tenon/assets/index.html.haml
@@ -6,15 +6,12 @@
   .tools
     = render "tenon/shared/section_header/sidebar_toggle"
 
-    / .header-tool
-    /   = link_to raw("#{fa_icon('picture-o')} +"), '#', data: {'modal-target' => '#new-asset', 'modal-title' => 'Upload Assets'}
-
     .header-button
       = link_to '#', id: 'quick-search-toggle' do
         .header-icon= fa_icon('fw search')
 
-  %toolbox
-    = render "tenon/shared/section_header/quick_search", record_list: '#assets'
+.toolbox
+  = render "tenon/shared/section_header/quick_search", record_list: '#assets'
 
 .main-content
   %ul#assets.record-grid{data: {role: 'records-list', records: {url: assets_path(format: 'json'), template: 'tenon/templates/assets/asset_row', name: 'asset'}}}
