--- a/app/views/tenon/contacts/index.html.haml
+++ b/app/views/tenon/contacts/index.html.haml
@@ -10,8 +10,8 @@
       = link_to '#', id: 'quick-search-toggle' do
         .header-icon= fa_icon('fw search')
 
-  %toolbox
-    = render "tenon/shared/section_header/quick_search", record_list: '#contacts'
+.toolbox
+  = render "tenon/shared/section_header/quick_search", record_list: '#contacts'
 
 .main-content
   %ul#contacts.record-list{data: {records: {url: contacts_path(format: 'json'), template: 'tenon/templates/contacts/contact_row', name: 'contact'}}}
