--- a/app/views/tenon/galleries/index.html.haml
+++ b/app/views/tenon/galleries/index.html.haml
@@ -12,11 +12,9 @@
     .header-button
       = link_to '#', id: 'quick-search-toggle' do
         .header-icon= fa_icon('fw search')
-  / .header-tool
-  /   %a{:href => new_gallery_path }= raw "#{fa_icon('th')} +"
 
-  %toolbox
-    = render "tenon/shared/section_header/quick_search", record_list: '#galleries'
+.toolbox
+  = render "tenon/shared/section_header/quick_search", record_list: '#galleries'
 
 .main-content
   %ul#galleries.record-list{data: {records: {url: galleries_path(format: 'json'), template: 'tenon/templates/galleries/gallery_row', name: 'gallery'}}}
