--- a/app/views/tenon/post_categories/index.html.haml
+++ b/app/views/tenon/post_categories/index.html.haml
@@ -20,8 +20,8 @@
       = link_to '#', id: 'quick-search-toggle' do
         .header-icon= fa_icon('fw search')
 
-  %toolbox
-    = render "tenon/shared/section_header/quick_search", record_list: '#post_categories'
+.toolbox
+  = render "tenon/shared/section_header/quick_search", record_list: '#post_categories'
 
 .main-content
   = error_messages_for :post_category
