--- a/app/views/tenon/posts/index.html.haml
+++ b/app/views/tenon/posts/index.html.haml
@@ -18,11 +18,8 @@
       = link_to '#', id: 'quick-search-toggle' do
         .header-icon= fa_icon('fw search')
 
-    / .header-tool
-    /   %a{:href => new_post_path }= raw "#{fa_icon('file-text')} +"
-
-  %toolbox
-    = render "tenon/shared/section_header/quick_search", record_list: '#posts'
+.toolbox
+  = render "tenon/shared/section_header/quick_search", record_list: '#posts'
 
 .main-content
   %ul#posts.record-list{data: {records: {url: posts_path(format: 'json'), template: 'tenon/templates/posts/post_row', name: 'post'}}}
