--- a/lib/generators/tenon/scaffold_small/templates/view_index.html.haml
+++ b/lib/generators/tenon/scaffold_small/templates/view_index.html.haml
@@ -17,8 +17,8 @@
       = link_to '#', id: 'quick-search-toggle' do
         .header-icon= fa_icon('fw search')
 
-  %toolbox
-    = render "tenon/shared/section_header/quick_search", record_list: '#<%= plural_name %>'
+.toolbox
+  = render "tenon/shared/section_header/quick_search", record_list: '#<%= plural_name %>'
 
 .main-content
   = error_messages_for :<%= singular_name %>
