--- a/app/assets/stylesheets/tenon/ui/record-lists.css.scss
+++ b/app/assets/stylesheets/tenon/ui/record-lists.css.scss
@@ -39,18 +39,18 @@ ul.record-list {
     color: $tn-black;
   }
   .record-details {
-    padding: 10px;
+    padding: 0 0 10px 10px;
     background-color: #fff;
     &:hover > .record-actions {
       opacity: 1;
     }
     .record-title {
-      margin-right: 0;
       word-wrap: break-word;
+      padding-top: 10px;
     }
     .record-fields {
       @include transition(opacity 0.2s ease);
-      padding: 10px 0 0;
+      padding: 10px 10px 0 0;
       width: 100%;
       @include clearfix;
       color: $tn-black;
@@ -67,9 +67,7 @@ ul.record-list {
         opacity: 0.25;
       }
 
-      position: absolute;
-      top: 0;
-      right: 0;
+      float: right;
       text-align: right;
       a {
         margin: 0;
