--- a/app/views/tenon/posts/_form.html.haml
+++ b/app/views/tenon/posts/_form.html.haml
@@ -35,7 +35,7 @@
       .box
         .form-group.inline
           = f.super_label :post_categories, 'Categories'
-          = f.select :post_category_ids, @categories.map { |c| [c.title, c.id] }, { }, {multiple: true}
+          = f.select :post_category_ids, @categories.map { |c| [c.title, c.id] }
 
     %h4.box-label Publish Your Post
     .box
@@ -48,7 +48,7 @@
         = f.super_label :allow_comments, "Allow Comments?"
 
       .form-group
-        = f.text_field :created_at, label: "Publish Date", data: {behaviour: 'datetime-picker'}, placeholder: '--'
+        = f.text_field :publish_at, label: "Publish Date", data: {behaviour: 'datetime-picker'}, placeholder: '--'
 
       .row.content
         %button.btn.btn-comp.btn-block.submit Save
