minor style fixes, replace old transparentize background colours with -highlight, bump version to 1.0.3

--- a/app/assets/stylesheets/tenon/layout/util-nav.css.scss
+++ b/app/assets/stylesheets/tenon/layout/util-nav.css.scss
@@ -28,7 +28,7 @@ util-nav {
     width: 60px;
     height: 50px;
     &:hover {
-      background-color: transparentize(#fff, 0.6);
+      background-color: $tn-highlight;
     }
   }
 }
