Permissions on post nav

--- a/app/views/tenon/shared/_posts_nav.html.haml
+++ b/app/views/tenon/shared/_posts_nav.html.haml
@@ -1,5 +1,8 @@
 %h4 Posts
 %nav
   %ul
-    %li{class: ('active' if controller_name == 'posts')}= link_to "Posts", posts_path
-    %li{class: ('active' if controller_name == 'post_categories')}= link_to "Post Categories", post_categories_path
+    - if can?(:manage, Tenon::Post)
+      %li{class: ('active' if controller_name == 'posts')}= link_to "Posts", posts_path
+
+    - if can?(:manage, Tenon::PostCategory)
+      %li{class: ('active' if controller_name == 'post_categories')}= link_to "Post Categories", post_categories_path
