--- a/app/views/tenon/pages/_form.html.haml
+++ b/app/views/tenon/pages/_form.html.haml
@@ -41,9 +41,12 @@
         = f.text_field :publish_at, label: "Publish Date", data: {behaviour: 'datetime-picker'}, placeholder: '--'
 
       .row.content
-        %button.btn.btn-comp.btn-block.submit Save
-        = save_draft_button(@page)
-        .last-autosave
+        - if can?(:publish, @page)
+          %button.btn.btn-comp.btn-block.submit Save
+
+        - if can?(:create, Tenon::ItemVersion)
+          = save_draft_button(@page)
+          .last-autosave
 
       %hr
       .content
